*update background css *remove unused color prop *change add icon colour *fix bug where modal wasn't closing & campaign state values were persisting after creating campaign *fix bug in modal form where selecting multiple Channels would bug out in UI and not update properly *rearrange buttons in form *make text field label permanently shrink *remove text

--- a/marketing-ui/src/App.scss
+++ b/marketing-ui/src/App.scss
@@ -1,19 +1,20 @@
 .app-container {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .navtab-container {
   width: 200px;
-  background-color: lightgray;
+  background-color: #1f1f1f;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .content-container {
   flex-grow: 1;
   padding: 20px;
+  background: #181818;
 }
