--- a/marketing-ui/src/features/marketing-campaigns/marketing_campaigns_list/MarketingCampaignsList.scss
+++ b/marketing-ui/src/features/marketing-campaigns/marketing_campaigns_list/MarketingCampaignsList.scss
@@ -1,6 +1,7 @@
 .campaigns-list-grid{
   display: grid;
   grid-column-gap: 300px;
+  grid-row-gap: 30px;
   grid-template-columns: repeat(auto-fit, 300px);
   margin-top: 5vh;
   margin-left: 15px;
