--- a/marketing-ui/src/features/marketing-channels/marketing_channels_list/MarketingChannelsList.scss
+++ b/marketing-ui/src/features/marketing-channels/marketing_channels_list/MarketingChannelsList.scss
@@ -1,9 +1,10 @@
 .channels-list-grid{
   display: grid;
-  grid-column-gap: 60px;
+  grid-column-gap: 70px;
+  grid-row-gap: 30px;
   grid-template-columns: repeat(auto-fit, 125px);
   margin-top: 10vh;
-  margin-left: 15px;
+  margin-left: 5vh;
 }
 
 .stack-create-button-label{
